search bar on mobile fixed

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -127,13 +127,13 @@ body{
         .find{
             font-size: 20px;
             display: flex;
-            position: relative;
             margin-left: $margin-left;
             height: $margin-top;
             background-color: white;
             width: 80%;
             @media(max-width: $small-break){
                 position: fixed;
+                top: 0;
                 z-index: 1;
                 margin: 0 $margin-left-small;
             } 
@@ -224,7 +224,7 @@ body{
     section.movies{
         margin: 30px 20px 50px 150px;
         @media(max-width: $small-break){
-            margin: 10px;
+            margin: 100px 20px;
         }
         div{
             margin: 30px 0;
